<resources>
    <string name="app_name">국민대학교 기숙사</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="first">공지사항</string>
    <string name="second">게시판</string>
    <string name="third">Q/A</string>

    <string name="login">Login Page</string>
    <string name="login_login">Login</string>
    <string name="login_sno">학번</string>
    <string name="login_password">Password</string>
    <string name="login_join">Join</string>

    <string name="join_main">Join</string>
    <string name="join_sno">학번</string>
    <string name="join_password">Password</string>
    <string name="join_name">NickName</string>
    <string name="join_list">Prefered Tour Places</string>
    <string name="join_join">Submit</string>
    <string name="cancel_text">Cancel</string>

    <string name="write_title">제목 : </string>
    <string name="write_content">내용</string>
    <string name="write_title_text">글쓰기</string>

    <string name="outSleep">외박 신청</string>
    <string name="outSleep_SNO">학번</string>
    <string name="outSleep_date">날짜</string>
    <string name="outSleep_resister">외박신청</string>

    <string name="outSleep_confirm">외박신청확인</string>

    <string name="outSleep_specific_back">뒤로가기</string>
    <string name="outSleep_specific_confirm">허가하기</string>
    <string name="outSleep_specific_cancel">불허하기</string>


    <string name="student_name">이름</string>
    <string name="student_room_check">참석여부 : </string>
    <string name="check_submit">점호 완료</string>

    <string name="rental_check">대여 확인</string>
    <string name="rental">대여</string>

    <string name="student_rental">물품 대여</string>
    <string name="student_rental_sno">학번</string>
    <string name="student_rental_object">대여 물품</string>
    <string name="student_rental_time">반납 기간</string>
    <string name="student_rental_resister">물품 대여 신청</string>

    <string name="manager_rental">대여신청확인</string>

    <string name="manager_rental_specific_back">뒤로가기</string>
    <string name="manager_rental_specific_confirm">허가하기</string>
    <string name="manager_rental_specific_cancel">불허하기</string>

    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>

    <string name="question_resister">나의질문등록</string>
    <string name="question_list">나의질문목록</string>

    <string name="question_answer_button">답변등록하기</string>
    <string name="question_answer">질문내역</string>
    <string name="question_answer_sno">학번</string>
    <string name="question_answer_time">등록일</string>
    <string name="question_answer_title">제목</string>
    <string name="question_answer_content">내용</string>
    <string name="question_answer_answer_title">답변제목</string>
    <string name="question_answer_answer_content">답변내용</string>

    <string name="comment_regist_btn">댓글 등록</string>
    <string name="post_time">등록 시간</string>
    <string name="Bulletin_content">게시글 내용</string>

    <string name="answer_hint">답변을 입력하세요</string>
</resources>
