<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_header_height"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/activity_layout_header_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_layout_header_padding"
        android:visibility="gone" />

    <!-- android:padding="@color/activity_layout_header_background" -->

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_layout_body_margin"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_layout_body_padding">

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_left_margin"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_left_padding"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_center_margin"
            android:layout_weight="2"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_center_padding">

            <!-- content start -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_manager_answer"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/question_answer"
                        android:textColor="@color/black"
                        android:textSize="50dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.beardedhen.androidbootstrap.BootstrapWell
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:bootstrapSize="xl">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_manager_answer_sno"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/question_answer_sno"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_manager_answer_sno_value"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:lines="1"
                                android:singleLine="true"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_manager_answer_time"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/question_answer_time"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_manager_answer_time_value"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:imeOptions="actionNext"
                                android:textColor="@color/black" />
                        </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_manager_answer_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="35dp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_manager_answer_content"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:lines="10"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_manager_answer_answer_title"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_weight="5"
                                android:text="@string/question_answer_answer_title"
                                android:textColor="@color/black" />
                            <EditText
                                android:id="@+id/et_manager_answer_answer_title"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_weight="2"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_manager_answer_answer_content"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_gravity="center"
                                android:layout_weight="5"
                                android:text="@string/question_answer_answer_content"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_manager_answer_answer_content"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:maxLines = "10"
                                android:textColor="@color/black" />
                        </LinearLayout>

                    </LinearLayout>
                </com.beardedhen.androidbootstrap.BootstrapWell>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_question_answer_submit"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/question_answer_button"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <!-- content end -->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_right_margin"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_right_padding"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_footer_height"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/activity_layout_footer_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_layout_footer_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>